css/groove_writer.css
	/* this is for debugging layout issues - puts a read border around everything */
	/* body * { border: 1px solid red; }		 */
	body {
		.width: 750px;
		margin: 10px;
		background: #B2B28F;
		font-family: Calibri;
	}
	.warnings {
		font-family: monospace;
		display: none;
	}
	@media print {
		body {margin:0; padding:0; border:0}
		div.newpage {page-break-before: always}
		div.nobrk {page-break-inside: avoid}
	}
	.Printable {
		display: block;
	}
	.nonPrintable {
		display: block;
	}
	#divisionButtonContainer {
		display: inline-block;
		margin-right: 10px;
	}
	#musicalInput {
		margin-top: 10px;
	}
	#hiddenDescription {
		display: none;
	}
	.staff-container {
		display: inline-block;
		font-family:  Times New Roman;
		position:relative;
		background: #FFFFCC;
		border: 3px solid #000;
		border-radius: 25px;
		box-shadow: 7px 7px 5px #888888;
	}
	#staff-container2 {
		display: none;
	}
	.heading1 {
		font-size: 30px;
		font-weight: bold;
	}
	#upperRight {
		position: absolute;
		top: 10px;
		right: 10px;
	}
	.line-labels {
		display: inline-block;
		vertical-align: top;
		width: 80px;
		font-family: Calibri;
		display: table-cell;
	}
	.stickings-label {
		display: none;
		padding-top: 7px;
		margin-left: 8px;
		font-size: 16px;
		cursor: pointer;
	}
	.hh-label {
		display: block;
		white-space:nowrap;
		margin-top: 20px;
		margin-left: 8px;
		font-size: 22px;
		cursor: pointer;
	}
	.snare-label {
		margin-top: 35px;
		margin-left: 8px;
		font-size: 22px;
		cursor: pointer;
	}
	.kick-label {
		margin-top: 35px;
		margin-left: 8px;
		font-size: 22px;
		cursor: pointer;
	}
	
	.music-line-container {
		display: inline-block; 
		/top: 30px; 
		z-index: 3;
		display: table-cell;
	}
	.stickings-container {
		display: none;
		margin-top: 0px;
		white-space:nowrap;
		-moz-user-select: none;
		-webkit-user-select: none;
		-ms-user-select: none;
	}
	.hi-hat-container {
		margin-top: 10px;
		/border: 1px solid red;
		white-space:nowrap;
		-moz-user-select: none;
		-webkit-user-select: none;
		-ms-user-select: none;
	}
	.snare-container {
		margin-top: 5px;
		white-space:nowrap;
		-moz-user-select: none;
		-webkit-user-select: none;
		-ms-user-select: none;
	}
	.kick-container {
		margin-top: 24px;
		white-space:nowrap;
		-moz-user-select: none;
		-webkit-user-select: none;
		-ms-user-select: none;
	}
	.staff-line-1{
		position: absolute; top: 36px;
		width:100%; 
		height:0px; 
		border-top:3px solid #000; 
	}
	.staff-line-2{
		position: absolute; top: 66px;
		width:100%; 
		height:0px; 
		border-top:3px solid #000; 
	}
	.staff-line-3{
		position: absolute; top: 97px;
		width:100%; 
		height:0px; 
		border-top:3px solid #000; 
	}
	.staff-line-4{
		position: absolute; top: 126px;
		width:100%; 
		height:0px; 
		border-top:3px solid #000; 
	}
	.staff-line-5{
		position: absolute; top: 157px;
		width:100%; 
		height:0px; 
		border-top:3px solid #000; 
	}
	.notes-container {
		position: relative; 
		z-index: 4;
		margin-right: 5px;
	}
	.sticking {
		display: inline-block;
		position: relative;
		border: 1px solid;
		border-color: transparent;
		width: 30px;
		height: 24px;
		margin-right: 2px;
		margin-left: 2px;
	}
	.hi-hat {
		display: inline-block;
		position: relative;
		border: 1px solid;
		border-color: transparent;
		width: 30px;
		height: 36px;
		margin-right: 2px;
		margin-left: 2px;
	}
	.snare {
		display: inline-block;
		position: relative;
		border: 1px solid;
		border-color: transparent;
		width: 30px;
		height: 50px;
		margin-right: 2px;
		margin-left: 2px;
	}
	.kick {
		display: inline-block;
		position: relative;
		border: 1px solid;
		border-color: transparent;
		width: 30px;
		height: 54px;
		margin-right: 2px;
		margin-left: 2px;
	}
	.sticking_right {
		position: absolute; top: 0px; left: 6px;
		font-size: 24px;
		color: #CCCCCC;
		cursor: pointer;
	}
	.sticking_left {
		position: absolute; top: 0px; left: 6px;
		font-size: 24px;
		color: #CCCCCC;
		cursor: pointer;
	}
	.hh_crash {
		position: absolute; top: 0px; left: 2px;
		font-size: 52px;
		color: transparent;
		cursor: pointer;
	}
	.hh_ride {
		position: absolute; top: 6px; left: 3px;
		font-size: 30px;
		color: transparent;
		cursor: pointer;
	}
	.hh_cross {
		position: absolute; top: 6px; left: 3px;
		font-size: 30px;
		color: #CCCCCC;
		cursor: pointer;
	}
	.hh_open {
		position: absolute; top: -9px; left: 9px;
		font-size: 20px;
		color: transparent;
	}
	.hh_close {
		position: absolute; top: -8px; left: 9px;
		font-size: 20px;
		color: transparent;
		float:left;
	}
	.hh_accent {
		position: absolute; top: -8px; left: 9px;
		font-size: 20px;
		color: transparent;
		float:left;
	}
	.snare_ghost {
		position: absolute; top: 16px; left: 0px;
		font-size: 28px;
		color: transparent;
		cursor: pointer;
	}
	.snare_circle {
		position: absolute; bottom: 0px; left: 0px;
		width:100%;
		height:60%;
		background: #CCCCCC;
		border-radius: 75px 45px 67px 45px;
		cursor: pointer;
	}
	.snare_xstick {
		position: absolute; top: 16px; left: 3px;
		font-size: 32px;
		color: transparent;
		cursor: pointer;
	}
	.snare_accent {
		position: absolute; top: -10px; left: 8px;
		font-size: 30px;
		color: transparent;
	}
	.kick_circle {
		position: absolute; top: 0px; left: 0px;
		width:100%;
		height:56%;
		background: #CCCCCC;
		border-radius: 75px 45px 67px 45px;
		cursor: pointer;
	}
	
	.kick_splash {
		position: absolute; top: 26px; left: 3px;
		font-size: 30px;
		color: transparent;
		cursor: pointer;
	}
	.opening_note_space {
		display: inline-block;
		width:1px;
		height:1px;
		background: transparent;
	}
	.end_note_space {
		display: inline-block;
		width:1px;
		height:1px;
		background: transparent;
	}
	.space_between_note_groups {
		display: inline-block;
		width:20px;
		height:1px;
		background: transparent;
	}
	.subdivision {
		display: inline-block;
		background: #FFFFCC;
		font-size: 130%;
		color: #0000EE;
		text-decoration: none;
		border:1px solid #CCCCCC;
		border-radius: 5px;
		box-shadow: 7px 7px 5px #888888;
		padding: 4px;
		cursor: pointer;
	}
	#advancedEditAnchor {
		display: inline-block;
		background: #FFFFCC;
		color: #0000EE;
		font-size: 80%;
		text-decoration: none;
		border:1px solid #CCCCCC;
		border-radius: 5px;
		box-shadow: 7px 7px 5px #888888;
		padding: 4px;
		cursor: pointer;
	}
	.rightButtons {
		display: inline-block;
		background: #FFFFCC;
		color: #0000EE;
		font-size: 80%;
		text-decoration: none;
		border:1px solid #CCCCCC;
		border-radius: 5px;
		box-shadow: 7px 7px 5px #888888;
		padding: 4px;
		cursor: pointer;
	}
	#permutationType {
		margin-top: 10px;
	}
	#noteInstructions {
		font-size: 120%;
		font-weight: bold;
		margin-top: 14px;
		margin-left: 25px;
	}
	#exportMidi {
	}
	#ABC_Results {
		display: none;
	}
	#svgTarget {
		width: 795px;
		background: #FFF;
		border: 1px solid #000;
		box-shadow: 7px 7px 5px #888888;
	}
	
	// Context Menu
	.noteContextMenu { 
		
	}
	.noteContextMenu>ul.list { 
		display: none;
		position:absolute; left:30px; top:-30px; z-index:999;
		width:150px;
		margin:0; padding:10px; list-style:none;
		background:#fff; color:#333;
		border-radius:5px;
		box-shadow:0 0 5px #999
	}
	.noteContextMenu>ul.list li {
		padding:10px;
		border-bottom: solid 1px #CCCCCC;
	}
	.noteContextMenu>ul.list li:hover {
		background:#EC6603; color:#fff;
	}
	.noteContextMenu>ul.list li:last-child { 
		border:none;
	}
	hr {
		width: 795px;
		margin-left: 0px;
	}
	#playerControl {
		display: inline-block;
		border: solid 1px #CCCCCC;
		border-radius: 25px;
		box-shadow: 7px 7px 5px #888888;
		background-color: #000;
		padding-top: 2px;
		padding-bottom: 0px;
		margin-top: 10px;
		margin-bottom: 10px;
	}
	#tempoAndProgress {
		display: inline-block;
	}
	#tempoInput  {
		background-color: 3f91e5;
		border: solid 1px #000;
		position: relative; top: 5px;
		width: 250px;
		height:22px;
		padding: 0px;
	}
	#tempoSettings {
		color: #FFF;
	}
	#tempoOutput {
		display: inline-block;
		position: relative; top: -2px;
		background-color: #000;
		font-size: 20px;
		color: #FFF;
		padding-right: 10px;
		padding-left: 5px;
	}
	#swingInput  {
		background-color: 3f91e5;
		border: solid 1px #000;
		position: relative; top: 0px;
		width: 250px;
		height:22px;
		padding: 0px;
	}
	#swingSettings {
		color: #FFF;
	}
	#swingOutput {
		display: inline-block;
		position: relative; top: -6px;
		background-color: #000;
		font-size: 20px;
		color: #FFF;
		padding-right: 10px;
		padding-left: 5px;
	}
	#MIDIProgress {
		width: 90%;
		position: relative; top: -3px; left: 5%;
		margin-bottom: 2px;
		height: 10px;
	}
	#playImage,  #repeatImage {
		position: relative; top: 0px;
		cursor: pointer;
	}
	#ABCSource {
		font-family: monospace; 
		font-size: 14px;
	}
	#fullURLPopup {
		visibility: hidden;
		position:absolute; left:250px; top:250px; z-index:999;
		background-color: #CCCC52;
		width: 500px;
		padding: 10px;
		border: solid 5px #000;
	}
	#fullURLCloseButton {
		font-size: 120%;
		float: right;
	}
	#fullURLTextField {
		width: 495px;
	}
	#fullURLLink {
		float: right;
	}
	#buttonsAboveSheetMusic {
		margin-top: 10px;
		width: 797px;
		display: flex;
		justify-content: space-between;
	}
	#showHideSecondMeasureButton {
	}
	#showHideStickingsButton {
	}
	#printButton {
	}
	#exportMidiButton {
	}
	#shareSaveButton {
	}
	.centeringSpace {
		/margin-right: 5%;
		/margin-left: 5%;
	}
	button {
		cursor: pointer;
	}
	input[type=checkbox] {  
		vertical-align: bottom;
		width: 18px;
		height: 18px;
		cursor: pointer;
	}  

